successfully gathered recipe data from API

--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Keto is Neato!</title>
 
     <script src="./script/index.js"></script>
-    
+
 </head>
 <body>
+    <h1>Keto is Neato</h1>
     
+    <h3>Recipes gathered from the API</h3>
+    <div id="recipes"></div>
+
 </body>
 </html>
